<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.bossini.cadastrousuariounicofatecipitarde.EditarUsuarioActivity"
    tools:showIn="@layout/activity_editar_usuario"
    android:orientation="vertical">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/nomeEditText"
            android:hint="@string/dica_nome"/>

    </android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/foneEditText"
            android:hint="@string/dica_fone"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <android.support.design.widget.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/emailEditText"
            android:hint="@string/dica_email"/>

    </android.support.design.widget.TextInputLayout>

    <ImageView
        android:onClick="tirarFoto"
        android:layout_gravity="center"
        android:id="@+id/fotoEditarImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@mipmap/ic_launcher" />


</LinearLayout>
