<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="br.com.bossini.cadastrousuariounicofatecipitarde.MainActivity"
    tools:showIn="@layout/activity_main"
    android:columnCount="2"
    android:useDefaultMargins="true">

    <TextView
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:paddingBottom="@dimen/padding_textview"
        android:paddingTop="@dimen/padding_textview"
        android:text="@string/rotulo_nome"/>

    <TextView
        android:id="@+id/nomeTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:paddingBottom="@dimen/padding_textview"
        android:paddingTop="@dimen/padding_textview"
        android:layout_gravity="fill_horizontal"
        android:background="@color/colorAccent"
        android:elevation="@dimen/elevation_textview"
        android:gravity="center"/>

    <TextView
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:paddingBottom="@dimen/padding_textview"
        android:paddingTop="@dimen/padding_textview"
        android:text="@string/rotulo_fone"/>

    <TextView
        android:id="@+id/foneTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:paddingBottom="@dimen/padding_textview"
        android:paddingTop="@dimen/padding_textview"
        android:layout_gravity="fill_horizontal"
        android:background="@color/colorAccent"
        android:elevation="@dimen/elevation_textview"
        android:gravity="center"/>

    <TextView
        android:layout_gravity="right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:paddingBottom="@dimen/padding_textview"
        android:paddingTop="@dimen/padding_textview"
        android:text="@string/rotulo_email"/>

    <TextView
        android:id="@+id/emailTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:paddingBottom="@dimen/padding_textview"
        android:paddingTop="@dimen/padding_textview"
        android:layout_gravity="fill_horizontal"
        android:background="@color/colorAccent"
        android:elevation="@dimen/elevation_textview"
        android:gravity="center"/>

    <ImageView
        android:layout_columnSpan="2"
        android:layout_column="0"
        android:layout_row="3"
        android:id="@+id/fotoImageView"
        android:layout_width="250dp"
        android:layout_height="250dp"
        app:srcCompat="@mipmap/ic_launcher"
        android:layout_gravity="center"/>


</GridLayout>
